Bug fiw: border on mobile nav

--- a/css/style.css
+++ b/css/style.css
@@ -1627,6 +1627,12 @@ ul.footer-nav li {
       -webkit-backdrop-filter: blur(10px) saturate(120%);
    }
 
+   .nav-mobile {
+       box-shadow: 0px 10px 30px 1px rgba(0,0,0,0.1);
+      -webkit-box-shadow: 0px 10px 30px 1px rgba(0,0,0,0.3);
+      border: 1.5px solid rgba(255, 255, 255, 0.05);
+   }
+
    .side-panel {
       background: rgba(32, 32, 32, 0.85);
       backdrop-filter: blur(10px) saturate(120%);
